// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWF LS JSON diagnostic missing property value 1`] = `2`;

exports[`SWF LS JSON diagnostic missing property value 2`] = `
Array [
  Object {
    "message": "Missing property \\"type\\".",
    "range": Object {
      "end": Object {
        "character": 11,
        "line": 5,
      },
      "start": Object {
        "character": 10,
        "line": 5,
      },
    },
    "severity": 2,
  },
  Object {
    "code": 516,
    "message": "Value expected",
    "range": Object {
      "end": Object {
        "character": 11,
        "line": 10,
      },
      "start": Object {
        "character": 10,
        "line": 10,
      },
    },
    "severity": 1,
    "source": "serverless-workflow-json",
  },
]
`;

exports[`SWF LS JSON diagnostic missing state type 1`] = `1`;

exports[`SWF LS JSON diagnostic missing state type 2`] = `
Array [
  Object {
    "message": "Missing property \\"type\\".",
    "range": Object {
      "end": Object {
        "character": 11,
        "line": 5,
      },
      "start": Object {
        "character": 10,
        "line": 5,
      },
    },
    "severity": 2,
  },
]
`;

exports[`SWF LS JSON diagnostic unclosed brackets 1`] = `2`;

exports[`SWF LS JSON diagnostic unclosed brackets 2`] = `
Array [
  Object {
    "code": 514,
    "message": "Expected comma",
    "range": Object {
      "end": Object {
        "character": 9,
        "line": 10,
      },
      "start": Object {
        "character": 8,
        "line": 10,
      },
    },
    "severity": 1,
    "source": "serverless-workflow-json",
  },
  Object {
    "code": 517,
    "message": "Expected comma or closing bracket",
    "range": Object {
      "end": Object {
        "character": 7,
        "line": 11,
      },
      "start": Object {
        "character": 6,
        "line": 11,
      },
    },
    "severity": 1,
    "source": "serverless-workflow-json",
  },
]
`;

exports[`SWF LS JSON diagnostic valid 1`] = `0`;

exports[`SWF LS JSON diagnostic valid 2`] = `Array []`;

exports[`SWF LS JSON diagnostic wrong start state 1`] = `1`;

exports[`SWF LS JSON diagnostic wrong start state 2`] = `
Array [
  Object {
    "message": "Missing 'Wrong state name' in 'states'",
    "range": Object {
      "end": Object {
        "character": 35,
        "line": 3,
      },
      "start": Object {
        "character": 17,
        "line": 3,
      },
    },
  },
]
`;

exports[`SWF LS JSON diagnostic wrong states type 1`] = `1`;

exports[`SWF LS JSON diagnostic wrong states type 2`] = `
Array [
  Object {
    "message": "Incorrect type. Expected \\"array\\".",
    "range": Object {
      "end": Object {
        "character": 37,
        "line": 3,
      },
      "start": Object {
        "character": 18,
        "line": 3,
      },
    },
    "severity": 2,
  },
]
`;
